--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@angular/material": "^21.0.3",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "apexcharts": "^5.3.6",
+    "ng-apexcharts": "^2.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
